tests/decompile-test/errors/non_variable_assignment.ts
// @case: assignment
let x = 0;
(x) = 1

// @case: plus equals
let x2 = 0;
(x) += 1

// @case: plus plus
let x3 = 0;
(x)++